# discord-rolepersist

./: .gitignore  Cargo.toml  example-config.json
src/: main.rs
